--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,10 +52,24 @@ img {
     font-size: 4rem;
 }
 
-#action-message {
+
+.msg-container {
     margin-top: 5rem;
+}
+
+#action-message {
     background-color: #081b31;
     color: #fff;
     font-size: 2rem;
-    display: inline-block;
+    display: inline;
+    padding: 2rem;
+    border-radius: 10px;
+}
+
+#player-name {
+    font-size: 20px;
+    color: #333;
+    text-align: center;
+    margin-top: 20px;
+    font-weight: bold;
 }
