--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,7 @@ img {
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    margin-top: 5rem;
+    margin-top: 1rem;
 }
 
 .score-bord {
@@ -53,6 +53,17 @@ img {
 }
 
 
+#user-score {
+    color: #4CAF50;
+    /* Green */
+}
+
+#computer-score {
+    color: #f44336;
+    /* Red */
+}
+
+
 .msg-container {
     margin-top: 5rem;
 }
@@ -66,10 +77,116 @@ img {
     border-radius: 10px;
 }
 
+
 #player-name {
     font-size: 20px;
-    color: #333;
+    color: #4CAF50;
+    /* Green */
     text-align: center;
     margin-top: 20px;
     font-weight: bold;
+}
+
+/* Style for input field */
+#player-name-input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+/* Style for button */
+#start-game {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+#start-game:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;
+}
+
+#reset-game {
+    padding: 10px 20px;
+    background-color: #ab2209;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+
+#reset-game:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid #dc0f0f;
+}
+
+
+#action-message.game-draw {
+    background-color: orange;
+    /* Set the background color to yellow */
+
+}
+
+#action-message.game-lose {
+    background-color: red;
+    /* Set the background color to yellow */
+}
+
+#action-message.game-win {
+    background-color: green;
+    /* Set the background color to yellow */
+}
+
+/* Style for input field with error class */
+#player-name-input.error {
+    border: 2px solid red;
+    animation: shake 0.5s linear;
+}
+
+#action-message.game-over {
+    background-color: blue;
+    animation: shake 2s linear;
+
+}
+
+/* Define the shake animation */
+@keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+
+    25% {
+        transform: translateX(-10px);
+    }
+
+    50% {
+        transform: translateX(10px);
+    }
+
+    75% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
 }
